feat: implement filtering by checkpoint
